# assemblyline-services

./: .gitignore  .gitmodules  LICENSE  README.md  common.mk  config.yml  ruff.toml  tox.ini
ASTGrep/: .dockerignore  Makefile  README.md  pyproject.toml  requirements.txt  service_manifest.yml
ASTGrep/rules/: autofixes.sgconfig.yml  deobfuscation.sgconfig.yml  detection.sgconfig.yml  sgconfig.yml
ASTGrep/rules/autofixes/csharp/: static_functions.yaml
ASTGrep/rules/autofixes/python/: cleanup.yml
ASTGrep/rules/detection/: example.yml  py-builtin-getattr.yml  simple.yml
ASTGrep/rules/detection/confirmed/: py-builtin-getattr.yml  py-exec-b64.yml  simple.yml  (+2 more)
ASTGrep/rules/extended/: encrypted-js.yml  fernet.yml  py-builtin-getattr.yml  py-eval-getattr-import.yml  python-static-string-decode.yml  reverse-inline.yml  rules.yml
ASTGrep/rules/templates/: call-replace-tpl.yml.j2  python-decode-b64-function.yml.j2  python-horizon-replace-assigment.yml.j2  python-hyperion-replace-assigment.yml.j2  python-hyperion-replace-getting.yml.j2  python-rename-func.yml.j2  python-rename-identifier.yml.j2  python-replace-codepart.yml.j2  python-replace-static-var.yml.j2
ASTGrep/sample_rules/: exec-rule.yaml
ASTGrep/service/: al_run.py  controller.py  transformations.py  updater.py
ASTGrep/suspended-rules/: python-static-concat-args.yaml
ASTGrep/suspended-rules/csharp/: replaze-static.yaml
ASTGrep/tests/: .gitignore  test_deobfuscation.py
ASTGrep/tests/examples/: mixed_getattr.in  simple_cc.in  simple_fernet.in  simple_fernet.out  simple_getattr.in  simple_getattr.out
(+390 files in other folders)
